# MCRT

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  gen.bat  gen_mingw.bat  gen_vs2015.bat  gen_vs2017.bat  gen_vs2019.bat  testing.bat  update.bat
src/core/: aabb.cpp  aabb.h  boundedtriangle.cpp  boundedtriangle.h  bsdf.cpp  bsdf.h  camera.cpp  camera.h  consoledebug.cpp  consoledebug.h  constants.cpp  constants.h  envmap.cpp  envmap.h  film.cpp  film.h  geometry.cpp  geometry.h  intersection.cpp  intersection.h  light.cpp  light.h  lightpath.cpp  lightpath.h  logger.cpp  logger.h  material.cpp  material.h  mesh.cpp  mesh.h  numeric.cpp  numeric.h  ray.cpp  ray.h  sample.cpp  sample.h  scene.cpp  scene.h  scenebvh.cpp  scenebvh.h  (+9 more)
src/core/acceleration/: BVH.cpp  BVH.h  BoundedTriangle.cpp  BoundedTriangle.h  Intersection.cpp  Intersection.h  Logger.cpp  Logger.h  SAHBVH.cpp  SAHBVH.h  SplitBVH.cpp  SplitBVH.h  bvh.cpp  bvh.h  sahbvh.cpp  sahbvh.h  splitbvh.cpp  splitbvh.h
src/examples/bdpt/: bdpt_impl.h  demo_bdpt.cpp
src/examples/bssrdf/: bssrdf.cpp  bssrdf.h  demo_bssrdf.cpp  mesh_sample.cpp  mesh_sample.h  octree.cpp  octree.h
src/examples/consistent_normal/: demo_consistent_normal.cpp
src/examples/photonmap/: demo_photonmap.cpp  photonmap.cpp  photonmap.h
src/examples/pssmlt/: demo_pssmlt.cpp
src/examples/pt/: demo_pt.cpp
src/examples/splitbvh/: debug_mesh.cpp  debug_mesh.h  debugintersection.cpp  debugintersection.h  demo_splitbvh.cpp
src/examples/vcm/: demo_vcm.cpp  vcm_material.h  vcm_misc.h  vcm_scene.h
